force-app/main/default/objects/Campaign/Campaign.object-meta.xml
<CustomObject>
    <sharingModel>Read</sharingModel>
</CustomObject>