force-app/main/default/objects/Campaign/fields/A_B_Test__c.field-meta.xml
<CustomField>
    <fullName>A_B_Test__c</fullName>
    <defaultValue>false</defaultValue>
    <label>A/B Test</label>
    <type>Checkbox</type>
</CustomField>