force-app/main/default/objects/Campaign/fields/Asset_Type2__c.field-meta.xml
<CustomField>
    <fullName>Asset_Type2__c</fullName>
    <description>MIS-4271</description>
    <inlineHelpText>Specify the activity’s sub-category</inlineHelpText>
    <label>Asset Type2</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Event - External</fullName>
            </value>
            <value>
                <fullName>Event - Innovation Days</fullName>
            </value>
            <value>
                <fullName>Event - Owned</fullName>
            </value>
            <value>
                <fullName>Event - Online</fullName>
            </value>
            <value>
                <fullName>Content - Report</fullName>
            </value>
            <value>
                <fullName>Content - Case Study</fullName>
            </value>
            <value>
                <fullName>Content - Infographic</fullName>
            </value>
            <value>
                <fullName>Content - Blog Post</fullName>
            </value>
            <value>
                <fullName>Content - Video</fullName>
            </value>
            <value>
                <fullName>Content - Landing Page</fullName>
            </value>
            <value>
                <fullName>Email - One-off</fullName>
            </value>
            <value>
                <fullName>Email - Automated Cadence</fullName>
            </value>
            <value>
                <fullName>Email - Triggered</fullName>
            </value>
            <value>
                <fullName>Email - Newsletter</fullName>
            </value>
            <value>
                <fullName>Chat Bot - One-off</fullName>
            </value>
            <value>
                <fullName>Chat Bot - Automated</fullName>
            </value>
            <value>
                <fullName>Webinar - Recording</fullName>
            </value>
            <value>
                <fullName>Webinar - Internal</fullName>
            </value>
            <value>
                <fullName>Webinar - External</fullName>
            </value>
            <value>
                <fullName>Lead List</fullName>
            </value>
            <value>
                <fullName>Survey - Feedback</fullName>
            </value>
            <value>
                <fullName>Survey - Satisfaction</fullName>
            </value>
            <value>
                <fullName>Survey - NPS</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>WhatsApp - Marketing</fullName>
            </value>
            <value>
                <fullName>WhatsApp - Utility</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>