force-app/main/default/objects/Campaign/fields/Asset_Type__c.field-meta.xml
<CustomField>
    <fullName>Asset_Type__c</fullName>
    <inlineHelpText>Specify the activity’s sub-category</inlineHelpText>
    <label>Asset Type</label>
    <type>TextArea</type>
</CustomField>