force-app/main/default/objects/Campaign/fields/Campaign_CTA__c.field-meta.xml
<CustomField>
    <fullName>Campaign_CTA__c</fullName>
    <label>Campaign&apos;s Call to Action</label>
    <length>255</length>
    <type>Text</type>
</CustomField>