force-app/main/default/objects/Campaign/fields/Campaign_KPIs__c.field-meta.xml
<CustomField>
    <fullName>Campaign_KPIs__c</fullName>
    <description>MIS-5946</description>
    <label>Campaign KPIs</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>