force-app/main/default/objects/Campaign/fields/Campaign_Medium_UTM__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Medium_UTM__c</fullName>
    <label>Campaign Medium (UTM)</label>
    <length>40</length>
    <type>Text</type>
</CustomField>