force-app/main/default/objects/Campaign/fields/Campaign_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Owner_Name__c</fullName>
    <description>MIS-2880</description>
    <inlineHelpText>Main POC for the Campaign</inlineHelpText>
    <label>Campaign Owner Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>