force-app/main/default/objects/Campaign/fields/Campain_Name_UTM__c.field-meta.xml
<CustomField>
    <fullName>Campain_Name_UTM__c</fullName>
    <label>Campain Name (UTM)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>