force-app/main/default/objects/Campaign/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <inlineHelpText>The channel for promoting your campaign.</inlineHelpText>
    <label>Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Adwords</fullName>
            </value>
            <value>
                <fullName>Banner</fullName>
            </value>
            <value>
                <fullName>Blog</fullName>
            </value>
            <value>
                <fullName>Brand Events</fullName>
            </value>
            <value>
                <fullName>Chili Piper</fullName>
            </value>
            <value>
                <fullName>Cohort Plus</fullName>
            </value>
            <value>
                <fullName>Discord</fullName>
            </value>
            <value>
                <fullName>Email campaign Pardot</fullName>
            </value>
            <value>
                <fullName>Email SalesLoft</fullName>
            </value>
            <value>
                <fullName>Email SFMC</fullName>
            </value>
            <value>
                <fullName>Employment Advocacy Program</fullName>
            </value>
            <value>
                <fullName>Event - external</fullName>
            </value>
            <value>
                <fullName>Event - internal</fullName>
            </value>
            <value>
                <fullName>Exit Pop Up</fullName>
            </value>
            <value>
                <fullName>External providers</fullName>
            </value>
            <value>
                <fullName>Facebook organic</fullName>
            </value>
            <value>
                <fullName>Facebook paid</fullName>
            </value>
            <value>
                <fullName>GDN</fullName>
            </value>
            <value>
                <fullName>Growth Hackers</fullName>
            </value>
            <value>
                <fullName>Indie Hackers</fullName>
            </value>
            <value>
                <fullName>Intercom</fullName>
            </value>
            <value>
                <fullName>LinkedIn Corona Group</fullName>
            </value>
            <value>
                <fullName>LinkedIn organic</fullName>
            </value>
            <value>
                <fullName>LinkedIn Paid</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Organic</fullName>
            </value>
            <value>
                <fullName>Outbound</fullName>
            </value>
            <value>
                <fullName>Owned Events</fullName>
            </value>
            <value>
                <fullName>Pardot Auto Education</fullName>
            </value>
            <value>
                <fullName>Pardot Auto Prospect</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>