force-app/main/default/objects/Campaign/fields/Clean_Name__c.field-meta.xml
<CustomField>
    <fullName>Clean_Name__c</fullName>
    <label>Clean Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>