force-app/main/default/objects/Campaign/fields/Content_Funnel_Stage__c.field-meta.xml
<CustomField>
    <fullName>Content_Funnel_Stage__c</fullName>
    <label>Content Funnel Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Top of Funnel</fullName>
            </value>
            <value>
                <fullName>Top to Middle of Funnel</fullName>
            </value>
            <value>
                <fullName>Middle of Funnel</fullName>
            </value>
            <value>
                <fullName>Middle to Bottom of Funnel</fullName>
            </value>
            <value>
                <fullName>Bottom of Funnel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>