force-app/main/default/objects/Campaign/fields/Country_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Country_Picklist__c</fullName>
    <description>Picklist Country field. Added a global picklist values to use. MIS-1928</description>
    <label>Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Countries</valueSetName>
    </valueSet>
</CustomField>