force-app/main/default/objects/Campaign/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <inlineHelpText>The department you work at in Similarweb</inlineHelpText>
    <label>Department</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Sales Development</fullName>
            </value>
            <value>
                <fullName>Demand Generation</fullName>
            </value>
            <value>
                <fullName>Product Marketing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>