force-app/main/default/objects/Campaign/fields/Department_Single__c.field-meta.xml
<CustomField>
    <fullName>Department_Single__c</fullName>
    <description>New Single Select Picklist field for the relevant &quot;Department&quot; of the Campaign. MIS - 1928</description>
    <inlineHelpText>The department you work at in Similarweb</inlineHelpText>
    <label>Department</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Demand Generation</fullName>
            </value>
            <value>
                <fullName>Field Marketing</fullName>
            </value>
            <value>
                <fullName>Product Marketing</fullName>
            </value>
            <value>
                <fullName>Marketing Operations</fullName>
            </value>
            <value>
                <fullName>Global Marketing</fullName>
            </value>
            <value>
                <fullName>Corporate Marketing</fullName>
            </value>
            <value>
                <fullName>GTM</fullName>
            </value>
            <value>
                <fullName>Customer Experience</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>NAL</fullName>
            </value>
            <value>
                <fullName>Brand Marketing</fullName>
                <isActive>false</isActive>
                <label>Brand Marketing</label>
            </value>
            <value>
                <fullName>Education</fullName>
                <isActive>false</isActive>
                <label>Education</label>
            </value>
            <value>
                <fullName>Integrated Marketing</fullName>
                <isActive>false</isActive>
                <label>Integrated Marketing</label>
            </value>
            <value>
                <fullName>Marketing</fullName>
                <isActive>false</isActive>
                <label>Marketing</label>
            </value>
            <value>
                <fullName>Sales</fullName>
                <isActive>false</isActive>
                <label>Sales</label>
            </value>
            <value>
                <fullName>Sales Development</fullName>
                <isActive>false</isActive>
                <label>Sales Development</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>