force-app/main/default/objects/Campaign/fields/Event_Data__c.field-meta.xml
<CustomField>
    <fullName>Event_Data__c</fullName>
    <description>MIS-2285</description>
    <label>Event Data</label>
    <type>Date</type>
</CustomField>