force-app/main/default/objects/Campaign/fields/External_Unique_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Unique_Id__c</fullName>
    <description>Unique Id from External systems like Linkedin/Zoom etc...</description>
    <externalId>true</externalId>
    <label>External Unique Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>