force-app/main/default/objects/Campaign/fields/Industry__c.field-meta.xml
<CustomField>
    <fullName>Industry__c</fullName>
    <description>MIS-269</description>
    <label>Industry</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>payments</fullName>
            </value>
            <value>
                <fullName>b2b saas</fullName>
            </value>
            <value>
                <fullName>logistics</fullName>
            </value>
            <value>
                <fullName>adtech</fullName>
            </value>
            <value>
                <fullName>ecommerce</fullName>
            </value>
            <value>
                <fullName>CPG</fullName>
            </value>
            <value>
                <fullName>Automotive</fullName>
            </value>
            <value>
                <fullName>Travel</fullName>
            </value>
            <value>
                <fullName>Financial Services</fullName>
            </value>
            <value>
                <fullName>Publishers &amp; Media</fullName>
            </value>
            <value>
                <fullName>Classifieds</fullName>
            </value>
            <value>
                <fullName>Consulting &amp; Market Research</fullName>
            </value>
            <value>
                <fullName>B2C Internet Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>