force-app/main/default/objects/Campaign/fields/Is_Branded__c.field-meta.xml
<CustomField>
    <fullName>Is_Branded__c</fullName>
    <defaultValue>false</defaultValue>
    <description>In case the Campaign is &quot;Branded&quot; (like &quot;Digital 100&quot;) this should be checked.</description>
    <label>Is Branded</label>
    <type>Checkbox</type>
</CustomField>