force-app/main/default/objects/Campaign/fields/KT_Id__c.field-meta.xml
<CustomField>
    <fullName>KT_Id__c</fullName>
    <label>KT Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>