force-app/main/default/objects/Campaign/fields/Landing_page__c.field-meta.xml
<CustomField>
    <fullName>Landing_page__c</fullName>
    <label>Landing page</label>
    <type>Url</type>
</CustomField>