force-app/main/default/objects/Campaign/fields/LeanData__Rep_MT_Accelerated_Bookings_Attr__c.field-meta.xml
<CustomField>
    <fullName>LeanData__Rep_MT_Accelerated_Bookings_Attr__c</fullName>
    <label>LD MT Accelerated Bookings Attribution</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>