force-app/main/default/objects/Campaign/fields/LeanData__Reporting_Number_Of_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>LeanData__Reporting_Number_Of_Opportunities__c</fullName>
    <label>Reporting Number of Opportunities</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>