force-app/main/default/objects/Campaign/fields/LeanData__Reporting_Number_Of_Touches__c.field-meta.xml
<CustomField>
    <fullName>LeanData__Reporting_Number_Of_Touches__c</fullName>
    <label>Reporting Number of Touches</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>