force-app/main/default/objects/Campaign/fields/MarkOps_Professional__c.field-meta.xml
<CustomField>
    <fullName>MarkOps_Professional__c</fullName>
    <description>MIS-3677</description>
    <label>MarkOps Professional</label>
    <length>255</length>
    <type>Text</type>
</CustomField>