force-app/main/default/objects/Campaign/fields/Primary_KPI__c.field-meta.xml
<CustomField>
    <fullName>Primary_KPI__c</fullName>
    <description>MIS-4231</description>
    <label>Primary KPI</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New/Leads</fullName>
            </value>
            <value>
                <fullName>New/Handraises</fullName>
            </value>
            <value>
                <fullName>Unique/Downloads</fullName>
            </value>
            <value>
                <fullName>New/Meetings</fullName>
            </value>
            <value>
                <fullName>New/Pipeline</fullName>
            </value>
            <value>
                <fullName>Awareness</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>