force-app/main/default/objects/Campaign/fields/Primary_SW_Industry__c.field-meta.xml
<CustomField>
    <fullName>Primary_SW_Industry__c</fullName>
    <description>Request to use &quot;SW Industry&quot; values same as we have on the Account level. MIS-1928</description>
    <inlineHelpText>If the target is multiple industries, select “Other”</inlineHelpText>
    <label>Primary SW Industry</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AdTech and AdNetwork</fullName>
            </value>
            <value>
                <fullName>Agency</fullName>
            </value>
            <value>
                <fullName>Automotive</fullName>
            </value>
            <value>
                <fullName>B2B Software</fullName>
            </value>
            <value>
                <fullName>B2C Internet Services</fullName>
            </value>
            <value>
                <fullName>Classifieds</fullName>
            </value>
            <value>
                <fullName>Consulting and Market Research</fullName>
            </value>
            <value>
                <fullName>CPG</fullName>
            </value>
            <value>
                <fullName>Data Integrators</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Equity Research</fullName>
            </value>
            <value>
                <fullName>Financial services</fullName>
            </value>
            <value>
                <fullName>Gambling and Gaming</fullName>
            </value>
            <value>
                <fullName>Hedge Funds and Asset Management</fullName>
            </value>
            <value>
                <fullName>Investment Banking</fullName>
            </value>
            <value>
                <fullName>Investors</fullName>
            </value>
            <value>
                <fullName>Logistics and Shipping</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Payments</fullName>
            </value>
            <value>
                <fullName>Pharma and Healthcare</fullName>
            </value>
            <value>
                <fullName>Private Equity</fullName>
            </value>
            <value>
                <fullName>Public Sector, Non Profit, Fraud and Compliance</fullName>
            </value>
            <value>
                <fullName>Publishers and Media</fullName>
            </value>
            <value>
                <fullName>Retail and eCommerce</fullName>
            </value>
            <value>
                <fullName>Telecom</fullName>
            </value>
            <value>
                <fullName>Travel</fullName>
            </value>
            <value>
                <fullName>Venture Capital</fullName>
            </value>
            <value>
                <fullName>Cross</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>