force-app/main/default/objects/Campaign/fields/Program_ID__c.field-meta.xml
<CustomField>
    <fullName>Program_ID__c</fullName>
    <description>MIS-4231</description>
    <label>Program ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>