force-app/main/default/objects/Campaign/fields/Program_Name__c.field-meta.xml
<CustomField>
    <fullName>Program_Name__c</fullName>
    <description>MIS-4752
MIS-4231</description>
    <inlineHelpText>For Parent campaigns - add “What initiative this campaign is a part of. e.g. Brand, Market Research, Field - UK.</inlineHelpText>
    <label>Program Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>