force-app/main/default/objects/Campaign/fields/Publication_name__c.field-meta.xml
<CustomField>
    <fullName>Publication_name__c</fullName>
    <label>Publication name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>