force-app/main/default/objects/Campaign/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <description>MIS-4498
Updated Values according to GTM - MIS-1928</description>
    <inlineHelpText>For multiple regions, select “Global”</inlineHelpText>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>North America</fullName>
            </value>
            <value>
                <fullName>LATAM</fullName>
            </value>
            <value>
                <fullName>Africa</fullName>
            </value>
            <value>
                <fullName>ANZ</fullName>
            </value>
            <value>
                <fullName>China</fullName>
            </value>
            <value>
                <fullName>Russia</fullName>
            </value>
            <value>
                <fullName>APAC</fullName>
            </value>
            <value>
                <fullName>EMEA</fullName>
            </value>
            <value>
                <fullName>Global</fullName>
            </value>
            <value>
                <fullName>ALL</fullName>
                <isActive>false</isActive>
                <label>ALL</label>
            </value>
            <value>
                <fullName>Brazil</fullName>
                <isActive>false</isActive>
                <label>Brazil</label>
            </value>
            <value>
                <fullName>EMEA Dach</fullName>
                <isActive>false</isActive>
                <label>EMEA Dach</label>
            </value>
            <value>
                <fullName>EMEA UK</fullName>
                <isActive>false</isActive>
                <label>EMEA UK</label>
            </value>
            <value>
                <fullName>Europe</fullName>
                <isActive>false</isActive>
                <label>Europe</label>
            </value>
            <value>
                <fullName>France</fullName>
                <isActive>false</isActive>
                <label>France</label>
            </value>
            <value>
                <fullName>Germany</fullName>
                <isActive>false</isActive>
                <label>Germany</label>
            </value>
            <value>
                <fullName>India</fullName>
                <isActive>false</isActive>
                <label>India</label>
            </value>
            <value>
                <fullName>Italy</fullName>
                <isActive>false</isActive>
                <label>Italy</label>
            </value>
            <value>
                <fullName>Japan</fullName>
                <isActive>false</isActive>
                <label>Japan</label>
            </value>
            <value>
                <fullName>Mexico</fullName>
                <isActive>false</isActive>
                <label>Mexico</label>
            </value>
            <value>
                <fullName>SEA</fullName>
                <isActive>false</isActive>
                <label>SEA</label>
            </value>
            <value>
                <fullName>United Kingdom</fullName>
                <isActive>false</isActive>
                <label>United Kingdom</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>