force-app/main/default/objects/Campaign/fields/Salesloft_Cadence_Link__c.field-meta.xml
<CustomField>
    <fullName>Salesloft_Cadence_Link__c</fullName>
    <description>MIS-2285</description>
    <label>Salesloft Cadence Link</label>
    <type>Url</type>
</CustomField>