force-app/main/default/objects/Campaign/fields/Secondary_Solution__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Solution__c</fullName>
    <description>Secondary &quot;Solution&quot; that relates to the Campaign. Request from MIS-1928</description>
    <label>Secondary Solution</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cross</fullName>
            </value>
            <value>
                <fullName>Web Intelligence</fullName>
            </value>
            <value>
                <fullName>Search Intelligence</fullName>
            </value>
            <value>
                <fullName>Stock Intelligence</fullName>
            </value>
            <value>
                <fullName>Sales Intelligence</fullName>
            </value>
            <value>
                <fullName>Shopper Intelligence</fullName>
            </value>
            <value>
                <fullName>DaaS</fullName>
            </value>
            <value>
                <fullName>App Intelligence</fullName>
            </value>
            <value>
                <fullName>Digital Marketing</fullName>
                <isActive>false</isActive>
                <label>Digital Marketing</label>
            </value>
            <value>
                <fullName>Digital Research</fullName>
                <isActive>false</isActive>
                <label>Digital Research</label>
            </value>
            <value>
                <fullName>Investor</fullName>
                <isActive>false</isActive>
                <label>Investor</label>
            </value>
            <value>
                <fullName>None</fullName>
                <isActive>false</isActive>
                <label>None</label>
            </value>
            <value>
                <fullName>Research (purchase intelligence)</fullName>
                <isActive>false</isActive>
                <label>Research (purchase intelligence)</label>
            </value>
            <value>
                <fullName>Sales</fullName>
                <isActive>false</isActive>
                <label>Sales</label>
            </value>
            <value>
                <fullName>Shopper</fullName>
                <isActive>false</isActive>
                <label>Shopper</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>